<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/str_today_task" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/add"
            android:title="@string/str_add_task" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:title="@string/str_history_task" />
<!--        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/str_setting" />-->
    </group>

    <item android:title="@string/title_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about"
                android:title="@string/title_about" />
        </menu>
    </item>

</menu>
